--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -219,7 +219,7 @@ CONFIG_AIO=y
 CONFIG_ADVISE_SYSCALLS=y
 # CONFIG_BPF_UNPRIV_DEFAULT_OFF is not set
 # CONFIG_USERFAULTFD is not set
-CONFIG_PCI_QUIRKS=y
+# CONFIG_PCI_QUIRKS is not set
 CONFIG_MEMBARRIER=y
 CONFIG_EMBEDDED=y
 CONFIG_HAVE_PERF_EVENTS=y
