--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -615,10 +615,7 @@ CONFIG_HARDEN_BRANCH_PREDICTOR=y
 # CONFIG_ARM64_SSBD is not set
 CONFIG_MITIGATE_SPECTRE_BRANCH_HISTORY=y
 CONFIG_ARM64_TAGGED_ADDR_ABI=y
-CONFIG_ARMV8_DEPRECATED=y
-CONFIG_SWP_EMULATION=y
-CONFIG_CP15_BARRIER_EMULATION=y
-CONFIG_SETEND_EMULATION=y
+# CONFIG_ARMV8_DEPRECATED is not set
 # CONFIG_ARM64_SW_TTBR0_PAN is not set
 
 #
