arm64: dts: sdmmagpie: Specify `rng-seed` node
- Specify a chosen node, rng-seed to increase initial device randomness.
- This is essentially read by the bootloader for the entropy.
- This patch was inspired by [1].

[1]: https://github.com/John-sanpe/lightcore/blob/45d44da1951be26d903b8fd1f3b3f997f6d5e642/boot/dts/espressif/esp8266.dtsi#L113

Signed-off-by: Cyber Knight <cyberknight755@gmail.com>
Signed-off-by: azrim <mirzaspc@gmail.com>

--- a/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
@@ -460,6 +460,7 @@
 
 	chosen {
 		bootargs = "rcupdate.rcu_expedited=1 rcu_nocbs=0-3 noirqdebug kpti=off nosoftlockup mce=ignore_ce mitigations=off cgroup.memory=nokmem,nosocket";
+		rng-seed = <0x12345678>;
 	};
 
 	soc: soc { };
