--- a/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
@@ -459,7 +459,7 @@
 	};
 
 	chosen {
-		bootargs = "rcupdate.rcu_expedited=1 rcu_nocbs=0-3 noirqdebug kpti=off nosoftlockup mce=ignore_ce";
+		bootargs = "rcupdate.rcu_expedited=1 rcu_nocbs=0-3 noirqdebug kpti=off nosoftlockup mce=ignore_ce mitigations=off";
 	};
 
 	soc: soc { };
