input: touchscreen: Add an interface to expose TP features to  userspace
 * Needs to implement and register ops from TP driver
 * Access them via /sys/touchpanel/*
 * Export capacitive keys status

Change-Id: I2baa61c6055ca6f6207ac0d6f627fe03048ccfb6

[taalojarvi]: Rename the config to avoid conflict with config of same name
Signed-off-by: taalojarvi <sreedevan05@gmail.com>

--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1301,6 +1301,15 @@ config TOUCHSCREEN_COMMON
 	default y
 	help
 	  Say Y here if you have lct tp info connected.
+	  
+	  If unsure, say N.
+
+config TOUCHSCREEN_SYSFS
+	bool "Common touchscreen interface to interact with userspace"
+	default y
+	help
+	  Say Y here if you want to control touchpanel features via
+	  /sys/touchpanel.
 
 	  If unsure, say N.
 
