defconfig: enable multigenerational lru
BUG=b:123039911
TEST=Ran platform.MemoryPressure on sarien to:
     1) open 170 tabs and observe ~60% reduction in full PSI
     2) profile kswapd before and after this series

     35.64%  lzo1x_1_do_compress
     24.44%  page_vma_mapped_walk
      4.44%  do_raw_spin_lock
      1.66%  memset_erms
      1.44%  vma_interval_tree_iter_next
      1.38%  ___might_sleep
      1.38%  vma_interval_tree_subtree_search
      1.16%  kmem_cache_alloc
      1.02%  zram_bvec_rw

     55.73%  lzo1x_1_do_compress
      3.75%  page_vma_mapped_walk
      3.42%  walk_pud_range
      2.16%  memset_erms
      1.83%  do_raw_spin_lock
      1.73%  evict_pages
      1.63%  zram_bvec_rw
      1.53%  zs_malloc
      1.33%  i915_gem_shrink
      1.09%  i915_gem_shrinker_count
      1.02%  queued_spin_lock_slowpath

     Ran platform.MemoryPressure on elm to:
     1) open 45 tabs and observe ~50% reduction in full PSI
     2) profile kswapd before and after this series

     25.58%  lzo1x_1_do_compress
     19.57%  page_vma_mapped_walk
      6.15%  _raw_spin_unlock_irq
      5.20%  ptep_clear_flush_young
      4.71%  do_raw_spin_lock
      2.31%  _raw_spin_unlock_irqrestore
      2.05%  ___might_sleep
      1.91%  memset
      1.89%  vma_interval_tree_subtree_search
      1.79%  vma_interval_tree_iter_next
      1.73%  page_referenced_one
      1.60%  ptep_clear_flush
      1.52%  _raw_spin_unlock
      1.19%  free_unref_page_list
      1.16%  do_raw_spin_unlock
      1.15%  memcpy

     45.48%  lzo1x_1_do_compress
      8.52%  _raw_spin_unlock_irq
      3.24%  memset
      3.22%  page_vma_mapped_walk
      2.37%  _raw_spin_unlock_irqrestore
      2.07%  free_unref_page_list
      1.88%  ptep_clear_flush
      1.82%  do_raw_spin_lock
      1.80%  zram_slot_free_notify
      1.75%  memcpy
      1.58%  zs_malloc
      1.25%  shrink_page_list

Signed-off-by: Yu Zhao <yuzhao@google.com>
Change-Id: Ibd34e46696ca65b7dae564e4d5fd8e736509b85d
Reviewed-on: https

--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -179,7 +179,6 @@ CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 # CONFIG_RELAY is not set
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_INITRAMFS_SOURCE=""
-# CONFIG_INITRAMFS_FORCE is not set
 CONFIG_RD_GZIP=y
 CONFIG_RD_BZIP2=y
 CONFIG_RD_LZMA=y
@@ -596,6 +595,11 @@ CONFIG_SPECULATIVE_PAGE_FAULT=y
 # CONFIG_HAVE_LOW_MEMORY_KILLER is not set
 CONFIG_PROCESS_RECLAIM=y
 # CONFIG_FORCE_ALLOC_FROM_DMA_ZONE is not set
+CONFIG_LRU_GEN=y
+CONFIG_LRU_GEN_ENABLED=y
+# CONFIG_LRU_GEN_STATS is not set
+CONFIG_NR_LRU_GENS=7
+CONFIG_TIERS_PER_GEN=4
 CONFIG_ARM64_DMA_USE_IOMMU=y
 CONFIG_ARM64_DMA_IOMMU_ALIGNMENT=9
 CONFIG_SECCOMP=y
@@ -637,10 +641,7 @@ CONFIG_RANDOMIZE_BASE=y
 #
 # Boot options
 #
-CONFIG_CMDLINE="cgroup_disable=pressure"
-# CONFIG_CMDLINE_FROM_BOOTLOADER is not set
-CONFIG_CMDLINE_EXTEND=y
-# CONFIG_CMDLINE_FORCE is not set
+CONFIG_CMDLINE=""
 # CONFIG_EFI is not set
 # CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
 # CONFIG_BUILD_ARM64_KERNEL_COMPRESSION_GZIP is not set
