defconfig: Unset CONFIG_REVERSE_CHARGE
Signed-off-by: taalojarvi <sreedevan05@gmail.com>

--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -726,7 +726,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
-CONFIG_CPU_FREQ_GOV_USERSPACE=y
+# CONFIG_CPU_FREQ_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_BOOST is not set
@@ -2631,7 +2631,7 @@ CONFIG_QPNP_SMB5=y
 # CONFIG_SMB1390_CHARGE_PUMP_PSY is not set
 # CONFIG_SMB1398_CHARGER is not set
 # CONFIG_SMB358_CHARGER is not set
-CONFIG_REVERSE_CHARGE=y
+# CONFIG_REVERSE_CHARGE is not set
 
 #
 # TI Technologies, Inc. Charger support
