--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -37,7 +37,7 @@ CONFIG_ARCH_SUPPORTS_UPROBES=y
 CONFIG_ARCH_PROC_KCORE_TEXT=y
 # CONFIG_QTI_GVM is not set
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
-# CONFIG_TOOLS_SUPPORT_RELR is not set
+CONFIG_TOOLS_SUPPORT_RELR=y
 CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_THREAD_INFO_IN_TASK=y
@@ -319,6 +319,7 @@ CONFIG_ARCH_HAS_STRICT_MODULE_RWX=y
 CONFIG_REFCOUNT_FULL=y
 # CONFIG_PANIC_ON_REFCOUNT_ERROR is not set
 CONFIG_ARCH_HAS_RELR=y
+CONFIG_RELR=y
 
 #
 # GCOV-based kernel profiling
@@ -374,15 +375,14 @@ CONFIG_BLK_MQ_PCI=y
 # IO Schedulers
 #
 CONFIG_IOSCHED_NOOP=y
-CONFIG_IOSCHED_DEADLINE=y
+# CONFIG_IOSCHED_DEADLINE is not set
 CONFIG_IOSCHED_CFQ=y
 CONFIG_CFQ_GROUP_IOSCHED=y
-# CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
-CONFIG_MQ_IOSCHED_DEADLINE=y
-CONFIG_MQ_IOSCHED_KYBER=y
+# CONFIG_MQ_IOSCHED_DEADLINE is not set
+# CONFIG_MQ_IOSCHED_KYBER is not set
 # CONFIG_IOSCHED_BFQ is not set
 CONFIG_ASN1=y
 CONFIG_UNINLINE_SPIN_UNLOCK=y
@@ -672,7 +672,7 @@ CONFIG_PM_SLEEP_SMP=y
 # CONFIG_PM_AUTOSLEEP is not set
 CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
-# CONFIG_PM_WAKELOCKS_GC is not set
+CONFIG_PM_WAKELOCKS_GC=y
 CONFIG_PM=y
 CONFIG_PM_DEBUG=y
 # CONFIG_PM_ADVANCED_DEBUG is not set
@@ -713,7 +713,7 @@ CONFIG_CPU_IDLE_MULTIPLE_DRIVERS=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_GOV_ATTR_SET=y
 CONFIG_CPU_FREQ_STAT=y
-CONFIG_CPU_FREQ_TIMES=y
+# CONFIG_CPU_FREQ_TIMES is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
@@ -1681,15 +1681,9 @@ CONFIG_ETHERNET=y
 # CONFIG_NET_VENDOR_AMD is not set
 # CONFIG_NET_VENDOR_AQUANTIA is not set
 # CONFIG_NET_VENDOR_ARC is not set
-CONFIG_NET_VENDOR_ATHEROS=y
-# CONFIG_ATL2 is not set
-# CONFIG_ATL1 is not set
-# CONFIG_ATL1E is not set
-# CONFIG_ATL1C is not set
-# CONFIG_ALX is not set
+# CONFIG_NET_VENDOR_ATHEROS is not set
 # CONFIG_NET_VENDOR_AURORA is not set
-CONFIG_NET_CADENCE=y
-# CONFIG_MACB is not set
+# CONFIG_NET_CADENCE is not set
 # CONFIG_NET_VENDOR_BROADCOM is not set
 # CONFIG_NET_VENDOR_BROCADE is not set
 # CONFIG_NET_VENDOR_CAVIUM is not set
@@ -1717,18 +1711,13 @@ CONFIG_NET_CADENCE=y
 # CONFIG_NET_VENDOR_NVIDIA is not set
 # CONFIG_NET_VENDOR_OKI is not set
 # CONFIG_ETHOC is not set
-CONFIG_NET_PACKET_ENGINE=y
-# CONFIG_HAMACHI is not set
-# CONFIG_YELLOWFIN is not set
+# CONFIG_NET_PACKET_ENGINE is not set
 # CONFIG_NET_VENDOR_QLOGIC is not set
 CONFIG_NET_VENDOR_QUALCOMM=y
 # CONFIG_QCA7000_SPI is not set
 # CONFIG_QCOM_EMAC is not set
 CONFIG_RMNET=y
-CONFIG_NET_VENDOR_REALTEK=y
-# CONFIG_8139CP is not set
-# CONFIG_8139TOO is not set
-# CONFIG_R8169 is not set
+# CONFIG_NET_VENDOR_REALTEK is not set
 # CONFIG_NET_VENDOR_RENESAS is not set
 # CONFIG_NET_VENDOR_RDC is not set
 # CONFIG_NET_VENDOR_ROCKER is not set
@@ -1765,7 +1754,7 @@ CONFIG_SWPHY=y
 #
 # CONFIG_AMD_PHY is not set
 # CONFIG_AQUANTIA_PHY is not set
-CONFIG_AT803X_PHY=y
+# CONFIG_AT803X_PHY is not set
 # CONFIG_BCM7XXX_PHY is not set
 # CONFIG_BCM87XX_PHY is not set
 # CONFIG_BROADCOM_PHY is not set
@@ -1781,7 +1770,7 @@ CONFIG_FIXED_PHY=y
 # CONFIG_LXT_PHY is not set
 # CONFIG_MARVELL_PHY is not set
 # CONFIG_MARVELL_10G_PHY is not set
-CONFIG_MICREL_PHY=y
+# CONFIG_MICREL_PHY is not set
 # CONFIG_MICROCHIP_PHY is not set
 # CONFIG_MICROSEMI_PHY is not set
 # CONFIG_NATIONAL_PHY is not set
@@ -1799,14 +1788,14 @@ CONFIG_PPP_BSDCOMP=y
 CONFIG_PPP_DEFLATE=y
 CONFIG_PPP_FILTER=y
 CONFIG_PPP_MPPE=y
-CONFIG_PPP_MULTILINK=y
-CONFIG_PPPOE=y
+# CONFIG_PPP_MULTILINK is not set
+# CONFIG_PPPOE is not set
 CONFIG_PPTP=y
 CONFIG_PPPOL2TP=y
-CONFIG_PPPOLAC=y
-CONFIG_PPPOPNS=y
-CONFIG_PPP_ASYNC=y
-CONFIG_PPP_SYNC_TTY=y
+# CONFIG_PPPOLAC is not set
+# CONFIG_PPPOPNS is not set
+# CONFIG_PPP_ASYNC is not set
+# CONFIG_PPP_SYNC_TTY is not set
 # CONFIG_SLIP is not set
 CONFIG_SLHC=y
 CONFIG_USB_NET_DRIVERS=y
@@ -1817,8 +1806,8 @@ CONFIG_USB_NET_DRIVERS=y
 CONFIG_USB_RTL8152=y
 # CONFIG_USB_LAN78XX is not set
 CONFIG_USB_USBNET=y
-CONFIG_USB_NET_AX8817X=y
-CONFIG_USB_NET_AX88179_178A=y
+# CONFIG_USB_NET_AX8817X is not set
+# CONFIG_USB_NET_AX88179_178A is not set
 CONFIG_USB_NET_CDCETHER=y
 # CONFIG_USB_NET_CDC_EEM is not set
 CONFIG_USB_NET_CDC_NCM=y
@@ -1830,18 +1819,11 @@ CONFIG_USB_NET_CDC_NCM=y
 # CONFIG_USB_NET_SMSC75XX is not set
 # CONFIG_USB_NET_SMSC95XX is not set
 # CONFIG_USB_NET_GL620A is not set
-CONFIG_USB_NET_NET1080=y
+# CONFIG_USB_NET_NET1080 is not set
 # CONFIG_USB_NET_PLUSB is not set
 # CONFIG_USB_NET_MCS7830 is not set
 # CONFIG_USB_NET_RNDIS_HOST is not set
-CONFIG_USB_NET_CDC_SUBSET_ENABLE=y
-CONFIG_USB_NET_CDC_SUBSET=y
-# CONFIG_USB_ALI_M5632 is not set
-# CONFIG_USB_AN2720 is not set
-CONFIG_USB_BELKIN=y
-CONFIG_USB_ARMLINUX=y
-# CONFIG_USB_EPSON2888 is not set
-# CONFIG_USB_KC2190 is not set
+# CONFIG_USB_NET_CDC_SUBSET is not set
 # CONFIG_USB_NET_ZAURUS is not set
 # CONFIG_USB_NET_CX82310_ETH is not set
 # CONFIG_USB_NET_KALMIA is not set
@@ -1858,27 +1840,18 @@ CONFIG_WLAN=y
 # CONFIG_WLAN_VENDOR_ATH is not set
 # CONFIG_WLAN_VENDOR_ATMEL is not set
 # CONFIG_WLAN_VENDOR_BROADCOM is not set
-CONFIG_WLAN_VENDOR_CISCO=y
-CONFIG_WLAN_VENDOR_INTEL=y
-# CONFIG_IPW2100 is not set
-# CONFIG_IPW2200 is not set
-CONFIG_WLAN_VENDOR_INTERSIL=y
-# CONFIG_HOSTAP is not set
-# CONFIG_HERMES is not set
-# CONFIG_PRISM54 is not set
-CONFIG_WLAN_VENDOR_MARVELL=y
-# CONFIG_LIBERTAS is not set
-# CONFIG_MWIFIEX is not set
-CONFIG_WLAN_VENDOR_MEDIATEK=y
-CONFIG_WLAN_VENDOR_RALINK=y
-CONFIG_WLAN_VENDOR_REALTEK=y
-CONFIG_WLAN_VENDOR_RSI=y
-CONFIG_WLAN_VENDOR_ST=y
-CONFIG_WLAN_VENDOR_TI=y
-CONFIG_WLAN_VENDOR_ZYDAS=y
-# CONFIG_USB_ZD1201 is not set
-CONFIG_WLAN_VENDOR_QUANTENNA=y
-# CONFIG_QTNFMAC_PEARL_PCIE is not set
+# CONFIG_WLAN_VENDOR_CISCO is not set
+# CONFIG_WLAN_VENDOR_INTEL is not set
+# CONFIG_WLAN_VENDOR_INTERSIL is not set
+# CONFIG_WLAN_VENDOR_MARVELL is not set
+# CONFIG_WLAN_VENDOR_MEDIATEK is not set
+# CONFIG_WLAN_VENDOR_RALINK is not set
+# CONFIG_WLAN_VENDOR_REALTEK is not set
+# CONFIG_WLAN_VENDOR_RSI is not set
+# CONFIG_WLAN_VENDOR_ST is not set
+# CONFIG_WLAN_VENDOR_TI is not set
+# CONFIG_WLAN_VENDOR_ZYDAS is not set
+# CONFIG_WLAN_VENDOR_QUANTENNA is not set
 # CONFIG_USB_NET_RNDIS_WLAN is not set
 CONFIG_WCNSS_MEM_PRE_ALLOC=y
 # CONFIG_CNSS_CRYPTO is not set
@@ -1933,7 +1906,7 @@ CONFIG_INPUT_KEYBOARD=y
 # CONFIG_KEYBOARD_ADC is not set
 # CONFIG_KEYBOARD_ADP5588 is not set
 # CONFIG_KEYBOARD_ADP5589 is not set
-CONFIG_KEYBOARD_ATKBD=y
+# CONFIG_KEYBOARD_ATKBD is not set
 # CONFIG_KEYBOARD_QT1070 is not set
 # CONFIG_KEYBOARD_QT2160 is not set
 # CONFIG_KEYBOARD_DLINK_DIR685 is not set
@@ -1982,17 +1955,10 @@ CONFIG_INPUT_JOYSTICK=y
 # CONFIG_JOYSTICK_AS5011 is not set
 # CONFIG_JOYSTICK_JOYDUMP is not set
 CONFIG_JOYSTICK_XPAD=y
-CONFIG_JOYSTICK_XPAD_FF=y
-CONFIG_JOYSTICK_XPAD_LEDS=y
+# CONFIG_JOYSTICK_XPAD_FF is not set
+# CONFIG_JOYSTICK_XPAD_LEDS is not set
 # CONFIG_JOYSTICK_PSXPAD_SPI is not set
-CONFIG_INPUT_TABLET=y
-CONFIG_TABLET_USB_ACECAD=y
-CONFIG_TABLET_USB_AIPTEK=y
-CONFIG_TABLET_USB_GTCO=y
-CONFIG_TABLET_USB_HANWANG=y
-CONFIG_TABLET_USB_KBTAB=y
-# CONFIG_TABLET_USB_PEGASUS is not set
-# CONFIG_TABLET_SERIAL_WACOM4 is not set
+# CONFIG_INPUT_TABLET is not set
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_PROPERTIES=y
 # CONFIG_TOUCHSCREEN_ADS7846 is not set
@@ -2107,18 +2073,7 @@ CONFIG_FINGERPRINT_GF3208=y
 #
 # Hardware I/O ports
 #
-CONFIG_SERIO=y
-# CONFIG_SERIO_SERPORT is not set
-# CONFIG_SERIO_AMBAKMI is not set
-# CONFIG_SERIO_PCIPS2 is not set
-CONFIG_SERIO_LIBPS2=y
-# CONFIG_SERIO_RAW is not set
-# CONFIG_SERIO_ALTERA_PS2 is not set
-# CONFIG_SERIO_PS2MULT is not set
-# CONFIG_SERIO_ARC_PS2 is not set
-# CONFIG_SERIO_APBPS2 is not set
-# CONFIG_SERIO_GPIO_PS2 is not set
-# CONFIG_USERIO is not set
+# CONFIG_SERIO is not set
 # CONFIG_GAMEPORT is not set
 
 #
@@ -2355,7 +2310,7 @@ CONFIG_GENERIC_PINCONF=y
 # CONFIG_PINCTRL_AMD is not set
 # CONFIG_PINCTRL_MCP23S08 is not set
 # CONFIG_PINCTRL_SINGLE is not set
-CONFIG_PINCTRL_SX150X=y
+# CONFIG_PINCTRL_SX150X is not set
 CONFIG_PINCTRL_MSM=y
 # CONFIG_PINCTRL_APQ8064 is not set
 # CONFIG_PINCTRL_APQ8084 is not set
@@ -2375,7 +2330,7 @@ CONFIG_PINCTRL_QCOM_SPMI_PMIC=y
 # CONFIG_PINCTRL_SM8150 is not set
 CONFIG_PINCTRL_SDMMAGPIE=y
 # CONFIG_PINCTRL_SDMSHRIKE is not set
-CONFIG_PINCTRL_SM6150=y
+# CONFIG_PINCTRL_SM6150 is not set
 # CONFIG_PINCTRL_ATOLL is not set
 # CONFIG_PINCTRL_TRINKET is not set
 # CONFIG_PINCTRL_SDXPRAIRIE is not set
@@ -3183,7 +3138,7 @@ CONFIG_DRM_PANEL_BRIDGE=y
 # Display Interface Bridges
 #
 # CONFIG_DRM_ANALOGIX_ANX78XX is not set
-CONFIG_DRM_ANALOGIX_ANX7625=y
+# CONFIG_DRM_ANALOGIX_ANX7625 is not set
 # CONFIG_DRM_DUMB_VGA_DAC is not set
 # CONFIG_DRM_LVDS_ENCODER is not set
 # CONFIG_DRM_MEGACHIPS_STDPXXXX_GE_B850V3_FW is not set
@@ -3193,7 +3148,7 @@ CONFIG_DRM_ANALOGIX_ANX7625=y
 # CONFIG_DRM_SII902X is not set
 # CONFIG_DRM_TOSHIBA_TC358767 is not set
 # CONFIG_DRM_TI_TFP410 is not set
-CONFIG_DRM_LT_LT9611=y
+# CONFIG_DRM_LT_LT9611 is not set
 # CONFIG_DRM_I2C_ADV7511 is not set
 # CONFIG_DRM_ARCPGU is not set
 # CONFIG_DRM_HISI_HIBMC is not set
@@ -3213,9 +3168,9 @@ CONFIG_FB_CMDLINE=y
 CONFIG_FB_NOTIFY=y
 # CONFIG_FB_DDC is not set
 # CONFIG_FB_BOOT_VESA_SUPPORT is not set
-CONFIG_FB_CFB_FILLRECT=y
-CONFIG_FB_CFB_COPYAREA=y
-CONFIG_FB_CFB_IMAGEBLIT=y
+# CONFIG_FB_CFB_FILLRECT is not set
+# CONFIG_FB_CFB_COPYAREA is not set
+# CONFIG_FB_CFB_IMAGEBLIT is not set
 # CONFIG_FB_CFB_REV_PIXELS_IN_BYTE is not set
 # CONFIG_FB_SYS_FILLRECT is not set
 # CONFIG_FB_SYS_COPYAREA is not set
@@ -3226,7 +3181,7 @@ CONFIG_FB_CFB_IMAGEBLIT=y
 # CONFIG_FB_SVGALIB is not set
 # CONFIG_FB_MACMODES is not set
 # CONFIG_FB_BACKLIGHT is not set
-CONFIG_FB_MODE_HELPERS=y
+# CONFIG_FB_MODE_HELPERS is not set
 # CONFIG_FB_TILEBLITTING is not set
 
 #
@@ -3234,7 +3189,7 @@ CONFIG_FB_MODE_HELPERS=y
 #
 # CONFIG_FB_CIRRUS is not set
 # CONFIG_FB_PM2 is not set
-CONFIG_FB_ARMCLCD=y
+# CONFIG_FB_ARMCLCD is not set
 # CONFIG_FB_CYBER2000 is not set
 # CONFIG_FB_ASILIANT is not set
 # CONFIG_FB_IMSTT is not set
@@ -3289,7 +3244,6 @@ CONFIG_BACKLIGHT_QCOM_SPMI_WLED=y
 # CONFIG_BACKLIGHT_BD6107 is not set
 # CONFIG_BACKLIGHT_ARCXCNN is not set
 # CONFIG_VGASTATE is not set
-CONFIG_VIDEOMODE_HELPERS=y
 CONFIG_HDMI=y
 # CONFIG_LOGO is not set
 CONFIG_SOUND=y
@@ -3311,7 +3265,7 @@ CONFIG_SND_DYNAMIC_MINORS=y
 CONFIG_SND_MAX_CARDS=32
 CONFIG_SND_SUPPORT_OLD_API=y
 CONFIG_SND_PROC_FS=y
-CONFIG_SND_VERBOSE_PROCFS=y
+# CONFIG_SND_VERBOSE_PROCFS is not set
 # CONFIG_SND_VERBOSE_PRINTK is not set
 # CONFIG_SND_DEBUG is not set
 # CONFIG_SND_SEQUENCER is not set
@@ -3532,7 +3486,7 @@ CONFIG_HID_GENERIC=y
 # CONFIG_HID_MAYFLASH is not set
 # CONFIG_HID_MICROSOFT is not set
 # CONFIG_HID_MONTEREY is not set
-CONFIG_HID_MULTITOUCH=y
+# CONFIG_HID_MULTITOUCH is not set
 # CONFIG_HID_NINTENDO is not set
 # CONFIG_HID_NTI is not set
 # CONFIG_HID_NTRIG is not set
@@ -3542,7 +3496,8 @@ CONFIG_HID_MULTITOUCH=y
 # CONFIG_HID_PETALYNX is not set
 # CONFIG_HID_PICOLCD is not set
 # CONFIG_HID_PLANTRONICS is not set
-# CONFIG_HID_PLAYSTATION is not set
+CONFIG_HID_PLAYSTATION=y
+CONFIG_PLAYSTATION_FF=y
 # CONFIG_HID_PRIMAX is not set
 # CONFIG_HID_RETRODE is not set
 # CONFIG_HID_ROCCAT is not set
@@ -3609,21 +3564,13 @@ CONFIG_USB_DEFAULT_PERSIST=y
 CONFIG_USB_XHCI_HCD=y
 CONFIG_USB_XHCI_PCI=y
 CONFIG_USB_XHCI_PLATFORM=y
-CONFIG_USB_EHCI_HCD=y
-# CONFIG_USB_EHCI_ROOT_HUB_TT is not set
-CONFIG_USB_EHCI_TT_NEWSCHED=y
-CONFIG_USB_EHCI_PCI=y
-# CONFIG_USB_EHCI_MSM is not set
-# CONFIG_USB_EHCI_MSM_HSIC is not set
-CONFIG_USB_EHCI_HCD_PLATFORM=y
+# CONFIG_USB_EHCI_HCD is not set
 # CONFIG_USB_OXU210HP_HCD is not set
 # CONFIG_USB_ISP116X_HCD is not set
 # CONFIG_USB_ISP1362_HCD is not set
 # CONFIG_USB_FOTG210_HCD is not set
 # CONFIG_USB_MAX3421_HCD is not set
-CONFIG_USB_OHCI_HCD=y
-CONFIG_USB_OHCI_HCD_PCI=y
-CONFIG_USB_OHCI_HCD_PLATFORM=y
+# CONFIG_USB_OHCI_HCD is not set
 # CONFIG_USB_UHCI_HCD is not set
 # CONFIG_USB_SL811_HCD is not set
 # CONFIG_USB_R8A66597_HCD is not set
@@ -3680,11 +3627,7 @@ CONFIG_USB_DWC3_OF_SIMPLE=y
 CONFIG_USB_DWC3_MSM=y
 # CONFIG_USB_DWC2 is not set
 # CONFIG_USB_CHIPIDEA is not set
-CONFIG_USB_ISP1760=y
-CONFIG_USB_ISP1760_HCD=y
-CONFIG_USB_ISP1760_HOST_ROLE=y
-# CONFIG_USB_ISP1760_GADGET_ROLE is not set
-# CONFIG_USB_ISP1760_DUAL_ROLE is not set
+# CONFIG_USB_ISP1760 is not set
 
 #
 # USB port drivers
@@ -3705,19 +3648,18 @@ CONFIG_USB_ISP1760_HOST_ROLE=y
 # CONFIG_USB_IDMOUSE is not set
 # CONFIG_USB_FTDI_ELAN is not set
 # CONFIG_USB_APPLEDISPLAY is not set
-# CONFIG_USB_SISUSBVGA is not set
 # CONFIG_USB_LD is not set
 # CONFIG_USB_TRANCEVIBRATOR is not set
 # CONFIG_USB_IOWARRIOR is not set
 # CONFIG_USB_TEST is not set
-CONFIG_USB_EHSET_TEST_FIXTURE=y
+# CONFIG_USB_EHSET_TEST_FIXTURE is not set
 # CONFIG_USB_ISIGHTFW is not set
 # CONFIG_USB_YUREX is not set
 # CONFIG_USB_EZUSB_FX2 is not set
 # CONFIG_USB_HUB_USB251XB is not set
 # CONFIG_USB_HSIC_USB3503 is not set
 # CONFIG_USB_HSIC_USB4604 is not set
-CONFIG_USB_LINK_LAYER_TEST=y
+# CONFIG_USB_LINK_LAYER_TEST is not set
 # CONFIG_USB_CHAOSKEY is not set
 # CONFIG_USB_REDRIVER_NB7VPQ904M is not set
 # CONFIG_USB_TYPEC_MUX_NXP5150A is not set
@@ -3737,7 +3679,7 @@ CONFIG_NOP_USB_XCEIV=y
 # CONFIG_USB_MSM_OTG is not set
 # CONFIG_USB_MSM_SSPHY is not set
 # CONFIG_USB_QCOM_8X16_PHY is not set
-CONFIG_USB_QCOM_EMU_PHY=y
+# CONFIG_USB_QCOM_EMU_PHY is not set
 CONFIG_USB_MSM_SSPHY_QMP=y
 CONFIG_MSM_QUSB_PHY=y
 CONFIG_MSM_HSUSB_PHY=y
@@ -3847,7 +3789,7 @@ CONFIG_MMC_BLOCK=y
 CONFIG_MMC_BLOCK_MINORS=32
 CONFIG_MMC_BLOCK_DEFERRED_RESUME=y
 # CONFIG_SDIO_UART is not set
-CONFIG_MMC_TEST=y
+# CONFIG_MMC_TEST is not set
 # CONFIG_MMC_RING_BUFFER is not set
 # CONFIG_MMC_EMBEDDED_SDIO is not set
 CONFIG_MMC_PARANOID_SD_INIT=y
@@ -4310,7 +4252,7 @@ CONFIG_COMMON_CLK=y
 # CONFIG_COMMON_CLK_CDCE925 is not set
 # CONFIG_COMMON_CLK_CS2000_CP is not set
 # CONFIG_CLK_QORIQ is not set
-CONFIG_COMMON_CLK_XGENE=y
+# CONFIG_COMMON_CLK_XGENE is not set
 # CONFIG_COMMON_CLK_NXP is not set
 # CONFIG_COMMON_CLK_PWM is not set
 # CONFIG_COMMON_CLK_PXA is not set
@@ -4401,10 +4343,9 @@ CONFIG_TIMER_OF=y
 CONFIG_TIMER_PROBE=y
 CONFIG_ARM_ARCH_TIMER=y
 CONFIG_ARM_ARCH_TIMER_EVTSTREAM=y
-CONFIG_ARM_ARCH_TIMER_OOL_WORKAROUND=y
-CONFIG_FSL_ERRATUM_A008585=y
-CONFIG_HISILICON_ERRATUM_161010101=y
-CONFIG_ARM64_ERRATUM_858921=y
+# CONFIG_FSL_ERRATUM_A008585 is not set
+# CONFIG_HISILICON_ERRATUM_161010101 is not set
+# CONFIG_ARM64_ERRATUM_858921 is not set
 # CONFIG_ARM_ARCH_TIMER_VCT_ACCESS is not set
 # CONFIG_ARM_TIMER_SP804 is not set
 # CONFIG_ATMEL_PIT is not set
@@ -4489,7 +4430,7 @@ CONFIG_RPMSG_QCOM_GLINK_SPI=y
 # Qualcomm SoC drivers
 #
 # CONFIG_QCOM_MEM_OFFLINE is not set
-CONFIG_QCOM_CPUSS_DUMP=y
+# CONFIG_QCOM_CPUSS_DUMP is not set
 CONFIG_QCOM_RUN_QUEUE_STATS=y
 # CONFIG_QCOM_GSBI is not set
 CONFIG_QCOM_MDT_LOADER=y
@@ -4511,8 +4452,7 @@ CONFIG_QCOM_SMEM=y
 # CONFIG_MSM_L2_SPM is not set
 CONFIG_QCOM_SCM=y
 # CONFIG_QCOM_SCM_QCPE is not set
-CONFIG_QCOM_MEMORY_DUMP_V2=y
-# CONFIG_MSM_DEBUG_LAR_UNLOCK is not set
+# CONFIG_QCOM_MEMORY_DUMP_V2 is not set
 CONFIG_QCOM_WATCHDOG_V2=y
 CONFIG_QCOM_FORCE_WDOG_BITE_ON_PANIC=y
 # CONFIG_QCOM_WDOG_IPI_ENABLE is not set
@@ -4532,11 +4472,10 @@ CONFIG_SETUP_SSR_NOTIF_TIMEOUTS=y
 CONFIG_SSR_SYSMON_NOTIF_TIMEOUT=20000
 CONFIG_SSR_SUBSYS_NOTIF_TIMEOUT=20000
 CONFIG_PANIC_ON_SSR_NOTIF_TIMEOUT=y
-CONFIG_MSM_BOOT_STATS=y
-# CONFIG_MSM_BOOT_TIME_MARKER is not set
+# CONFIG_MSM_BOOT_STATS is not set
 # CONFIG_MSM_CORE_HANG_DETECT is not set
 # CONFIG_QCOM_DCC is not set
-CONFIG_QCOM_DCC_V2=y
+# CONFIG_QCOM_DCC_V2 is not set
 # CONFIG_MSM_GLADIATOR_HANG_DETECT is not set
 # CONFIG_MSM_GLADIATOR_ERP is not set
 # CONFIG_SDX_EXT_IPC is not set
@@ -4556,7 +4495,7 @@ CONFIG_QCOM_EARLY_RANDOM=y
 # CONFIG_MSM_SPCOM is not set
 CONFIG_QTI_RPMH_API=y
 CONFIG_QTI_SYSTEM_PM=y
-CONFIG_QSEE_IPC_IRQ=y
+# CONFIG_QSEE_IPC_IRQ is not set
 # CONFIG_QSEE_IPC_IRQ_BRIDGE is not set
 CONFIG_QCOM_GLINK=y
 CONFIG_QCOM_GLINK_PKT=y
@@ -4570,7 +4509,7 @@ CONFIG_MSM_PM=y
 # CONFIG_MSM_PM_LEGACY is not set
 # CONFIG_MSM_QBT1000 is not set
 # CONFIG_APSS_CORE_EA is not set
-CONFIG_QCOM_FSA4480_I2C=y
+# CONFIG_QCOM_FSA4480_I2C is not set
 CONFIG_MSM_IDLE_STATS=y
 CONFIG_MSM_IDLE_STATS_FIRST_BUCKET=62500
 CONFIG_MSM_IDLE_STATS_BUCKET_SHIFT=2
@@ -4582,7 +4521,7 @@ CONFIG_MEM_SHARE_QMI_SERVICE=y
 # CONFIG_QCOM_HGSL_TCSR_SIGNAL is not set
 # CONFIG_MSM_PERFORMANCE is not set
 CONFIG_QMP_DEBUGFS_CLIENT=y
-CONFIG_QCOM_QHEE_ENABLE_MEM_PROTECTION=y
+# CONFIG_QCOM_QHEE_ENABLE_MEM_PROTECTION is not set
 CONFIG_QCOM_SMP2P_SLEEPSTATE=y
 CONFIG_QCOM_CDSP_RM=y
 CONFIG_QCOM_CX_IPEAK=y
@@ -4641,7 +4580,7 @@ CONFIG_EXTCON=y
 # CONFIG_EXTCON_QCOM_SPMI_MISC is not set
 # CONFIG_EXTCON_RT8973A is not set
 # CONFIG_EXTCON_SM5502 is not set
-CONFIG_EXTCON_USB_GPIO=y
+# CONFIG_EXTCON_USB_GPIO is not set
 # CONFIG_MEMORY is not set
 CONFIG_IIO=y
 # CONFIG_IIO_BUFFER is not set
@@ -5096,7 +5035,7 @@ CONFIG_DCACHE_WORD_ACCESS=y
 # CONFIG_EXT2_FS is not set
 # CONFIG_EXT3_FS is not set
 CONFIG_EXT4_FS=y
-CONFIG_EXT4_USE_FOR_EXT2=y
+# CONFIG_EXT4_USE_FOR_EXT2 is not set
 CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
 CONFIG_EXT4_ENCRYPTION=y
@@ -5113,7 +5052,7 @@ CONFIG_FS_MBCACHE=y
 # CONFIG_BTRFS_FS is not set
 # CONFIG_NILFS2_FS is not set
 CONFIG_F2FS_FS=y
-CONFIG_F2FS_STAT_FS=y
+# CONFIG_F2FS_STAT_FS is not set
 CONFIG_F2FS_FS_XATTR=y
 CONFIG_F2FS_FS_POSIX_ACL=y
 CONFIG_F2FS_FS_SECURITY=y
@@ -5168,7 +5107,7 @@ CONFIG_INCREMENTAL_FS=y
 # DOS/FAT/NT Filesystems
 #
 CONFIG_FAT_FS=y
-CONFIG_MSDOS_FS=y
+# CONFIG_MSDOS_FS is not set
 CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
@@ -5203,8 +5142,7 @@ CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_ORANGEFS_FS is not set
 # CONFIG_ADFS_FS is not set
 # CONFIG_AFFS_FS is not set
-CONFIG_ECRYPT_FS=y
-CONFIG_ECRYPT_FS_MESSAGING=y
+# CONFIG_ECRYPT_FS is not set
 CONFIG_SDCARD_FS=y
 # CONFIG_HFS_FS is not set
 # CONFIG_HFSPLUS_FS is not set
@@ -5221,9 +5159,9 @@ CONFIG_SDCARD_FS=y
 # CONFIG_QNX6FS_FS is not set
 # CONFIG_ROMFS_FS is not set
 CONFIG_PSTORE=y
-CONFIG_PSTORE_ZLIB_COMPRESS=y
+# CONFIG_PSTORE_ZLIB_COMPRESS is not set
 # CONFIG_PSTORE_LZO_COMPRESS is not set
-# CONFIG_PSTORE_LZ4_COMPRESS is not set
+CONFIG_PSTORE_LZ4_COMPRESS=y
 CONFIG_PSTORE_CONSOLE=y
 CONFIG_PSTORE_PMSG=y
 CONFIG_PSTORE_RAM=y
