--- a/.github/workflows/kernel_build.yml
+++ b/.github/workflows/kernel_build.yml
@@ -17,11 +17,9 @@ jobs:
         run: pacman -Syu --needed --noconfirm wget base-devel xmlto inetutils bc cpio python-sphinx python-sphinx_rtd_theme graphviz imagemagick git python zip github-cli fortune-mod
       - name: Build Stratosphere Kernel
         run: |
-          export TOKEN=${AUTH_TOKEN}
-          export TGKEN=${TELEGRAM_TOKEN}
+          export token=${TELEGRAM_TOKEN}
           bash ci_build.sh
         env:
-          AUTH_TOKEN: ${{ secrets.RELEASE_TOKEN }}
           TELEGRAM_TOKEN: ${{ secrets.TG_TOKEN }}
       - name: Store Kernel Package as Artifact
         uses: actions/upload-artifact@v3
