--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.14.290 Kernel Configuration
+# Linux/arm64 4.14.302 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -558,6 +558,7 @@ CONFIG_PCI_MSM=y
 # CONFIG_ARM64_ERRATUM_1024718 is not set
 CONFIG_ARM64_ERRATUM_1286807=y
 # CONFIG_ARM64_ERRATUM_1188873 is not set
+# CONFIG_ARM64_ERRATUM_1742098 is not set
 # CONFIG_CAVIUM_ERRATUM_22375 is not set
 # CONFIG_CAVIUM_ERRATUM_23154 is not set
 # CONFIG_CAVIUM_ERRATUM_27456 is not set
@@ -848,6 +849,7 @@ CONFIG_INET_AH=y
 CONFIG_INET_ESP=y
 # CONFIG_INET_ESP_OFFLOAD is not set
 CONFIG_INET_IPCOMP=y
+CONFIG_INET_TABLE_PERTURB_ORDER=16
 CONFIG_INET_XFRM_TUNNEL=y
 CONFIG_INET_TUNNEL=y
 CONFIG_INET_XFRM_MODE_TRANSPORT=y
@@ -1330,6 +1332,7 @@ CONFIG_RFKILL_LEDS=y
 # CONFIG_NFC is not set
 CONFIG_NFC_NQ=y
 # CONFIG_NTAG_NQ is not set
+# CONFIG_NFC_MAX32560 is not set
 # CONFIG_PSAMPLE is not set
 # CONFIG_NET_IFE is not set
 # CONFIG_LWTUNNEL is not set
@@ -5060,7 +5063,7 @@ CONFIG_ESOC_CLIENT=y
 CONFIG_ESOC_MDM_4x=y
 CONFIG_ESOC_MDM_DRV=y
 CONFIG_ESOC_MDM_DBG_ENG=y
-git@github.com:subhajeetmuhuri/android_kernel_xiaomi_surya.git# CONFIG_MDM_DBG_REQ_ENG is not set
+# CONFIG_MDM_DBG_REQ_ENG is not set
 
 #
 # Firmware Drivers
